refactor: get rid of most com.google.common.collect usage