@@ -6,7 +6,6 @@ import java.util.stream.Stream;
 
 import org.jetbrains.annotations.Nullable;
 
-import com.google.common.collect.ImmutableList;
 import com.stevekung.fishofthieves.FishOfThieves;
 import com.stevekung.fishofthieves.entity.ai.AbstractSchoolingThievesFishAi;
 import com.stevekung.fishofthieves.entity.ai.AbstractThievesFishAi;
@@ -46,7 +45,7 @@ public abstract class AbstractSchoolingThievesFish<T extends FishData> extends A
     private static final EntityDataAccessor<Boolean> NO_FLIP = SynchedEntityData.defineId(AbstractSchoolingThievesFish.class, EntityDataSerializers.BOOLEAN);
 
     //@formatter:off
-    protected static final ImmutableList<SensorType<? extends Sensor<? super AbstractSchoolingThievesFish<?>>>> SENSOR_TYPES = ImmutableList.of(
+    protected static final List<SensorType<? extends Sensor<? super AbstractSchoolingThievesFish<?>>>> SENSOR_TYPES = List.of(
             SensorType.NEAREST_LIVING_ENTITIES,
             FOTSensorTypes.NON_CREATIVE_NEAREST_PLAYERS,
             FOTSensorTypes.NEAREST_SCHOOLING_THIEVES_FISH,
@@ -54,7 +53,7 @@ public abstract class AbstractSchoolingThievesFish<T extends FishData> extends A
             FOTSensorTypes.NEAREST_FLOCK_LEADER,
             SensorType.HURT_BY
     );
-    protected static final ImmutableList<MemoryModuleType<?>> MEMORY_TYPES = ImmutableList.of(
+    protected static final List<MemoryModuleType<?>> MEMORY_TYPES = List.of(
             // Common AI
             MemoryModuleType.LOOK_TARGET,
             MemoryModuleType.WALK_TARGET,
