@@ -1,10 +1,11 @@
 package com.stevekung.fishofthieves.entity.animal;
 
+import java.util.List;
+
 import org.jetbrains.annotations.Nullable;
 
 import com.google.common.collect.BiMap;
 import com.google.common.collect.HashBiMap;
-import com.google.common.collect.ImmutableList;
 import com.mojang.serialization.Dynamic;
 import com.stevekung.fishofthieves.entity.AbstractSchoolingThievesFish;
 import com.stevekung.fishofthieves.entity.ai.DevilfishAi;
@@ -51,7 +52,7 @@ public class Devilfish extends AbstractSchoolingThievesFish<DevilfishVariant>
     });
 
     //@formatter:off
-    private static final ImmutableList<SensorType<? extends Sensor<? super Devilfish>>> SENSOR_TYPES = ImmutableList.of(
+    private static final List<SensorType<? extends Sensor<? super Devilfish>>> SENSOR_TYPES = List.of(
             SensorType.NEAREST_LIVING_ENTITIES,
             FOTSensorTypes.NON_CREATIVE_NEAREST_PLAYERS,
             SensorType.HURT_BY,
@@ -60,7 +61,7 @@ public class Devilfish extends AbstractSchoolingThievesFish<DevilfishVariant>
             FOTSensorTypes.NEAREST_MAGMA_BLOCK,
             FOTSensorTypes.DEVILFISH_ATTACKABLES
     );
-    private static final ImmutableList<MemoryModuleType<?>> MEMORY_TYPES = ImmutableList.of(
+    private static final List<MemoryModuleType<?>> MEMORY_TYPES = List.of(
             // Common AI
             MemoryModuleType.LOOK_TARGET,
             MemoryModuleType.WALK_TARGET,
